components/authz-custom/auth/authorizationpolicy-require-authz-custom.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-authz-custom
  namespace: istio-ingress
spec:
  action: CUSTOM
  selector:
    matchLabels:
      app: ingress-gateway
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        # TODO: try wildcards
        - "httpbin.example.com"
