components/authz-custom/auth/authorizationpolicy-require-oauth2-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-oauth2-proxy
  namespace: istio-ingress
spec:
  action: CUSTOM
  selector:
    matchLabels:
      app: istio-ingressgateway
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        # TODO: try wildcards
        - "nginx-echo-headers-istio-ingress.apps-crc.testing"
        - "https://golang-ex-stable-istio-ingress.apps-crc.testing"
